Fix how inline buttons wrap

--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -292,10 +292,15 @@ button.btn {
   }
 }
 
-.btn + .btn {
-  margin-left: $gutter;
+.inline-buttons {
+  margin-bottom: -1em;
   
-  &.block {
-    margin-left: 0;  
+  .btn {
+    margin-right: 20px;
+    margin-bottom: 1em;
+    
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
